# DetailedTM

./: .gitignore  Cargo.toml  PHASE_001_BOOTSTRAP_AND_BACKEND.md  PHASE_002_UI_AND_TASK_MANAGER_REFRESH.md  PHASE_003_TESTING_PACKAGING_AND_RELEASE.md  README.md  TESTING.md
release/: README_RELEASE.txt
src/: main.rs
src/app/: mod.rs  state.rs
src/backend/: collector.rs  gpu_metrics.rs  kill.rs  mod.rs  model.rs  network_metrics.rs  ports.rs  process_metrics.rs  shell_actions.rs  traffic.rs
src/tests/: mod.rs
src/ui/: controls.rs  mod.rs  search.rs  table.rs
