[package]
name = "detailed-tm"
version = "0.2.0"
edition = "2021"
description = "A detailed native Windows process and port monitor"
license = "MIT"

[[bin]]
name = "DetailedTM"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
eframe = "0.31"
egui_extras = "0.31"
sysinfo = "0.35"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
] }

[profile.release]
lto = "thin"
strip = "symbols"
