[package]
name = "detailed-tm"
version = "0.1.0"
edition = "2021"
description = "A detailed native Windows process and port monitor"
license = "MIT"

[[bin]]
name = "DetailedTM"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
eframe = "0.31"
egui_extras = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.35"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
    "Win32_System_Performance",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
] }
zstd = "0.13"

[profile.release]
lto = "thin"
strip = "symbols"
